--- a/package.json
+++ b/package.json
@@ -10,22 +10,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.0.0-next.7",
-    "@angular/common": "^16.0.0-next.7",
-    "@angular/compiler": "^16.0.0-next.7",
-    "@angular/core": "^16.0.0-next.7",
-    "@angular/forms": "^16.0.0-next.7",
-    "@angular/platform-browser": "^16.0.0-next.7",
-    "@angular/platform-browser-dynamic": "^16.0.0-next.7",
-    "@angular/router": "^16.0.0-next.7",
+    "@angular/animations": "^16.1.1",
+    "@angular/cdk": "16.1.1",
+    "@angular/common": "^16.1.1",
+    "@angular/compiler": "^16.1.1",
+    "@angular/core": "^16.1.1",
+    "@angular/forms": "^16.1.1",
+    "@angular/material": "16.1.1",
+    "@angular/platform-browser": "^16.1.1",
+    "@angular/platform-browser-dynamic": "^16.1.1",
+    "@angular/router": "^16.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.0-next.7",
-    "@angular/cli": "~16.0.0-next.7",
-    "@angular/compiler-cli": "^16.0.0-next.7",
+    "@angular-devkit/build-angular": "^16.1.0",
+    "@angular/cli": "~16.1.1",
+    "@angular/compiler-cli": "^16.1.1",
     "prettier": "^2.8.4",
     "typescript": "~4.9.4"
   }
